--- a/draftLuis.ipynb
+++ b/draftLuis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 437,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 438,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 439,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 440,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
        "4  5. PROCEDURES FOR RESPONDING TO VOMITING AND D...  41.816005 -87.700893  "
       ]
      },
-     "execution_count": 264,
+     "execution_count": 440,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 441,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
        "4  41.816005 -87.700893  "
       ]
      },
-     "execution_count": 265,
+     "execution_count": 441,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 442,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
        "False"
       ]
      },
-     "execution_count": 266,
+     "execution_count": 442,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 443,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 444,
    "metadata": {},
    "outputs": [
     {
@@ -469,6 +469,228 @@
     "**Discussion**\n",
     "\n",
     "We see that the distribution of different risk levels has slowly changed since 2010. There is a slow increase in high risk aka fast foods "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**2. Most inspected facilities analysis**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First we need a visualization of the facilities to identify the cleaning needed. We will also concentrate only on data from the two last years to avoid the creation of any outlier or irrelevant data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 445,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SUBWAY                          528\n",
+       "DUNKIN DONUTS                   204\n",
+       "MCDONALD'S                      112\n",
+       "7-ELEVEN                        102\n",
+       "BURGER KING                      79\n",
+       "TACO BELL                        78\n",
+       "WENDY'S                          76\n",
+       "DUNKIN DONUTS/BASKIN ROBBINS     59\n",
+       "FRESHII                          56\n",
+       "WINGSTOP                         56\n",
+       "POTBELLY SANDWICH WORKS          51\n",
+       "MARIANO'S                        51\n",
+       "STARBUCKS COFFEE                 50\n",
+       "CHIPOTLE MEXICAN GRILL           47\n",
+       "CITGO                            46\n",
+       "JIMMY JOHN'S                     46\n",
+       "MCDONALDS                        45\n",
+       "POPEYES                          43\n",
+       "STARBUCKS                        40\n",
+       "CORNER BAKERY CAFE               36\n",
+       "PIZZA HUT                        35\n",
+       "MC DONALDS                       34\n",
+       "SUBWAY SANDWICHES                32\n",
+       "KFC                              32\n",
+       "WHOLE FOODS MARKET               31\n",
+       "HAROLD'S CHICKEN                 29\n",
+       "DOLLAR TREE                      28\n",
+       "KENTUCKY FRIED CHICKEN           27\n",
+       "JIMMY JOHNS                      27\n",
+       "AU BON PAIN                      27\n",
+       "POPEYE'S                         26\n",
+       "Subway                           26\n",
+       "POTBELLY SANDWICH WORKS LLC      25\n",
+       "DOMINO'S                         24\n",
+       "JEWEL FOOD STORE                 24\n",
+       "LA MICHOACANA                    23\n",
+       "PRET A MANGER                    23\n",
+       "LAS ISLAS MARIAS                 23\n",
+       "SEE THRU CHINESE KITCHEN         22\n",
+       "PROTEIN BAR                      20\n",
+       "POTBELLY SANDWICH SHOP           20\n",
+       "JERK TACO MAN                    20\n",
+       "IHOP                             20\n",
+       "LAO SZE CHUAN                    20\n",
+       "PANDA EXPRESS                    20\n",
+       "PANERA BREAD                     20\n",
+       "MC DONALD'S                      18\n",
+       "ARGO TEA                         18\n",
+       "WOW BAO                          18\n",
+       "SENOR PAN CAFE                   18\n",
+       "Name: Name, dtype: int64"
+      ]
+     },
+     "execution_count": 445,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newfood = food[food.Year.isin(['2018','2019'])].copy()\n",
+    "newfood.Name.value_counts().head(50)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We see here some facilities are the same but with names slightly changed, so we need to adapt the data accordingly then we are going to make a deeper analysis on the these chains: McDonald's, Subway, Dunkin Donuts, Starbucks and Taco Bell. Why these restaurants ? Because they are all big chains which means they would normally follow the same standards but identifying different levels of risk might give us a clue of the quality of different locations in Chicago."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 446,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 446,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Drop NaN's\n",
+    "newfood.dropna(subset=['Name'], inplace=True)\n",
+    "newfood.Name.isna().any()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 447,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Top facilities cleaning (we will not take on account the cleaning of any facility other than the top 5)\n",
+    "newfood.Name = newfood.Name.str.upper()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 448,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MCDONALD'S                               131\n",
+       "MCDONALDS                                 51\n",
+       "MC DONALDS                                41\n",
+       "MC DONALD'S                               18\n",
+       "MCDONALD'S  (T3 HK FOOD COURT)             6\n",
+       "MCDONALD'S RESTAURANT                      6\n",
+       "MCDONALD?S 28128                           5\n",
+       "MCDONALD'S RESTAURANT  (T3 H9)             5\n",
+       "MCDONALD'S  (T5 ARRIVAL)                   5\n",
+       "MCDONALDS  (T3  K9)                        5\n",
+       "MCDONALD'S  (T2  E/F)                      4\n",
+       "MCDONALDS RESTAURANT                       4\n",
+       "MCDONALD'S RESTAURANTS                     4\n",
+       "MCDONALD'S #5813                           3\n",
+       "MCDONALD?S                                 3\n",
+       "DONALDS FAMOUS HOT DOGS                    3\n",
+       "MC DONALD'S  (T3  L4)                      3\n",
+       "MCDONALD'S  (T1  B11)                      2\n",
+       "MCDONALDS #4655                            2\n",
+       "MCDONALD'S - MCCAFE'                       2\n",
+       "MCDONALDS (T1 C10)                         2\n",
+       "MCDONALD'S #490                            2\n",
+       "OFFICER DONALD MARQUEZ CHARTER SCHOOL      2\n",
+       "MCDONALD'S #20104                          2\n",
+       "MC DONALDS # 25509                         1\n",
+       "MC DONALD'S RESTAURANT                     1\n",
+       "MC DONALD' S  # 6888                       1\n",
+       "MC DONALDS # 6771                          1\n",
+       "MC DONALDS-MCCORMICK PLACE NORTH           1\n",
+       "MCDONALDS #27672                           1\n",
+       "MCDONALDÏ¿½S                               1\n",
+       "MCDONALDÏ¿½S 28128                         1\n",
+       "MCDONALD'S #5293                           1\n",
+       "OFFICER DONALD MARQUEZ                     1\n",
+       "MCDONALD'S #26364                          1\n",
+       "Name: Name, dtype: int64"
+      ]
+     },
+     "execution_count": 448,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Let's see if there is other restaurants with \"donald\" to avoid adding wrong data to McDonald's\n",
+    "newfood[newfood[\"Name\"].str.contains(\"DONALD\")].Name.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 449,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#removing other restaurants than McDonald's than unifying all McDonald's\n",
+    "removable = ['MARQUEZ', 'DOGS']\n",
+    "newfood = newfood[~newfood.Name.str.contains('|'.join(removable))]\n",
+    "newfood.loc[newfood.Name.str.contains(\"DONALD\"), 'Name'] = \"MCDONALDS\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 450,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SUBWAY                          554\n",
+       "MCDONALDS                       316\n",
+       "DUNKIN DONUTS                   207\n",
+       "7-ELEVEN                        107\n",
+       "BURGER KING                      79\n",
+       "TACO BELL                        78\n",
+       "WENDY'S                          78\n",
+       "CHIPOTLE MEXICAN GRILL           63\n",
+       "DUNKIN DONUTS/BASKIN ROBBINS     59\n",
+       "WINGSTOP                         58\n",
+       "Name: Name, dtype: int64"
+      ]
+     },
+     "execution_count": 450,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newfood.Name.value_counts().head(10)"
    ]
   },
   {
