--- a/draftLuis.ipynb
+++ b/draftLuis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 437,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 438,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 439,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 440,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -72,12 +72,12 @@
        "      <th></th>\n",
        "      <th>Inspection ID</th>\n",
        "      <th>DBA Name</th>\n",
-       "      <th>Name</th>\n",
+       "      <th>AKA Name</th>\n",
        "      <th>License #</th>\n",
-       "      <th>Facility</th>\n",
+       "      <th>Facility Type</th>\n",
        "      <th>Risk</th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Type</th>\n",
+       "      <th>Inspection Date</th>\n",
+       "      <th>Inspection Type</th>\n",
        "      <th>Results</th>\n",
        "      <th>Violations</th>\n",
        "      <th>Latitude</th>\n",
@@ -165,26 +165,26 @@
        "</div>"
       ],
       "text/plain": [
-       "   Inspection ID               DBA Name                   Name  License #  \\\n",
+       "   Inspection ID               DBA Name               AKA Name  License #  \\\n",
        "0        2320830    THE HOXTON, CHICAGO    THE HOXTON, CHICAGO  2694640.0   \n",
        "1        2320831       OGDEN PLAZA INC.       OGDEN PLAZA INC.  2475982.0   \n",
        "2        2320829  PLAZA FOOD AND LIQUOR  PLAZA FOOD AND LIQUOR  2689756.0   \n",
        "3        2320813  PLAZA FOOD AND LIQUOR  PLAZA FOOD AND LIQUOR  2689757.0   \n",
        "4        2320757       GADS HILL CENTER       GADS HILL CENTER  2698627.0   \n",
        "\n",
-       "                          Facility             Risk                     Year  \\\n",
+       "                     Facility Type             Risk          Inspection Date  \\\n",
        "0                       Restaurant  Risk 2 (Medium)  2019-10-31T00:00:00.000   \n",
        "1                    Grocery Store     Risk 3 (Low)  2019-10-31T00:00:00.000   \n",
        "2                    Grocery Store     Risk 3 (Low)  2019-10-31T00:00:00.000   \n",
        "3                    Grocery Store     Risk 3 (Low)  2019-10-31T00:00:00.000   \n",
        "4  Daycare Above and Under 2 Years    Risk 1 (High)  2019-10-30T00:00:00.000   \n",
        "\n",
-       "      Type          Results  \\\n",
-       "0  License             Pass   \n",
-       "1  Canvass  Out of Business   \n",
-       "2  License        Not Ready   \n",
-       "3  License             Fail   \n",
-       "4  License             Fail   \n",
+       "  Inspection Type          Results  \\\n",
+       "0         License             Pass   \n",
+       "1         Canvass  Out of Business   \n",
+       "2         License        Not Ready   \n",
+       "3         License             Fail   \n",
+       "4         License             Fail   \n",
        "\n",
        "                                          Violations   Latitude  Longitude  \n",
        "0  36. THERMOMETERS PROVIDED & ACCURATE - Comment...  41.885699 -87.648789  \n",
@@ -194,13 +194,12 @@
        "4  5. PROCEDURES FOR RESPONDING TO VOMITING AND D...  41.816005 -87.700893  "
       ]
      },
-     "execution_count": 440,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "food.rename(columns={\"Inspection Date\": \"Year\", \"Inspection Type\": \"Type\", \"Facility Type\": \"Facility\", \"AKA Name\": \"Name\"}, inplace=True)\n",
     "food.head()"
    ]
   },
@@ -228,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 441,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -254,12 +253,12 @@
        "      <th></th>\n",
        "      <th>Inspection ID</th>\n",
        "      <th>DBA Name</th>\n",
-       "      <th>Name</th>\n",
+       "      <th>AKA Name</th>\n",
        "      <th>License #</th>\n",
-       "      <th>Facility</th>\n",
+       "      <th>Facility Type</th>\n",
        "      <th>Risk</th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Type</th>\n",
+       "      <th>Inspection Date</th>\n",
+       "      <th>Inspection Type</th>\n",
        "      <th>Results</th>\n",
        "      <th>Violations</th>\n",
        "      <th>Latitude</th>\n",
@@ -347,49 +346,49 @@
        "</div>"
       ],
       "text/plain": [
-       "   Inspection ID               DBA Name                   Name  License #  \\\n",
+       "   Inspection ID               DBA Name               AKA Name  License #  \\\n",
        "0        2320830    THE HOXTON, CHICAGO    THE HOXTON, CHICAGO  2694640.0   \n",
        "1        2320831       OGDEN PLAZA INC.       OGDEN PLAZA INC.  2475982.0   \n",
        "2        2320829  PLAZA FOOD AND LIQUOR  PLAZA FOOD AND LIQUOR  2689756.0   \n",
        "3        2320813  PLAZA FOOD AND LIQUOR  PLAZA FOOD AND LIQUOR  2689757.0   \n",
        "4        2320757       GADS HILL CENTER       GADS HILL CENTER  2698627.0   \n",
        "\n",
-       "                          Facility             Risk  Year     Type  \\\n",
-       "0                       Restaurant  Risk 2 (Medium)  2019  License   \n",
-       "1                    Grocery Store     Risk 3 (Low)  2019  Canvass   \n",
-       "2                    Grocery Store     Risk 3 (Low)  2019  License   \n",
-       "3                    Grocery Store     Risk 3 (Low)  2019  License   \n",
-       "4  Daycare Above and Under 2 Years    Risk 1 (High)  2019  License   \n",
+       "                     Facility Type             Risk Inspection Date  \\\n",
+       "0                       Restaurant  Risk 2 (Medium)            2019   \n",
+       "1                    Grocery Store     Risk 3 (Low)            2019   \n",
+       "2                    Grocery Store     Risk 3 (Low)            2019   \n",
+       "3                    Grocery Store     Risk 3 (Low)            2019   \n",
+       "4  Daycare Above and Under 2 Years    Risk 1 (High)            2019   \n",
        "\n",
-       "           Results                                         Violations  \\\n",
-       "0             Pass  36. THERMOMETERS PROVIDED & ACCURATE - Comment...   \n",
-       "1  Out of Business                                                NaN   \n",
-       "2        Not Ready                                                NaN   \n",
-       "3             Fail  5. PROCEDURES FOR RESPONDING TO VOMITING AND D...   \n",
-       "4             Fail  5. PROCEDURES FOR RESPONDING TO VOMITING AND D...   \n",
+       "  Inspection Type          Results  \\\n",
+       "0         License             Pass   \n",
+       "1         Canvass  Out of Business   \n",
+       "2         License        Not Ready   \n",
+       "3         License             Fail   \n",
+       "4         License             Fail   \n",
        "\n",
-       "    Latitude  Longitude  \n",
-       "0  41.885699 -87.648789  \n",
-       "1  41.855266 -87.712402  \n",
-       "2        NaN        NaN  \n",
-       "3        NaN        NaN  \n",
-       "4  41.816005 -87.700893  "
+       "                                          Violations   Latitude  Longitude  \n",
+       "0  36. THERMOMETERS PROVIDED & ACCURATE - Comment...  41.885699 -87.648789  \n",
+       "1                                                NaN  41.855266 -87.712402  \n",
+       "2                                                NaN        NaN        NaN  \n",
+       "3  5. PROCEDURES FOR RESPONDING TO VOMITING AND D...        NaN        NaN  \n",
+       "4  5. PROCEDURES FOR RESPONDING TO VOMITING AND D...  41.816005 -87.700893  "
       ]
      },
-     "execution_count": 441,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Year cleaning (keep only the year value)\n",
-    "food.Year = food.Year.str.split(\"-\").str[0]\n",
+    "food[\"Inspection Date\"] = food[\"Inspection Date\"].str.split(\"-\").str[0]\n",
     "food.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 442,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -398,14 +397,14 @@
        "False"
       ]
      },
-     "execution_count": 442,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Check for missing years\n",
-    "food.Year.isna().any()"
+    "food[\"Inspection Date\"].isna().any()"
    ]
   },
   {
@@ -417,23 +416,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 443,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "#risk distribution for every year\n",
-    "year_list = food.Year.unique().tolist()\n",
+    "year_list = food[\"Inspection Date\"].unique().tolist()\n",
     "year_list.sort()\n",
     "all_risks =  [[0 for _ in range(3)] for _ in range(len(year_list))]\n",
     "year = 0\n",
     "for i in year_list:\n",
-    "    all_risks[year] = food[food.Year==i].Risk.value_counts().sort_index().tail(3).tolist()\n",
+    "    all_risks[year] = food[food[\"Inspection Date\"]==i].Risk.value_counts().sort_index().tail(3).tolist()\n",
     "    year += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 444,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 445,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -503,12 +502,12 @@
        "DUNKIN DONUTS/BASKIN ROBBINS     59\n",
        "FRESHII                          56\n",
        "WINGSTOP                         56\n",
-       "POTBELLY SANDWICH WORKS          51\n",
        "MARIANO'S                        51\n",
+       "POTBELLY SANDWICH WORKS          51\n",
        "STARBUCKS COFFEE                 50\n",
        "CHIPOTLE MEXICAN GRILL           47\n",
-       "CITGO                            46\n",
        "JIMMY JOHN'S                     46\n",
+       "CITGO                            46\n",
        "MCDONALDS                        45\n",
        "POPEYES                          43\n",
        "STARBUCKS                        40\n",
@@ -520,40 +519,40 @@
        "WHOLE FOODS MARKET               31\n",
        "HAROLD'S CHICKEN                 29\n",
        "DOLLAR TREE                      28\n",
-       "KENTUCKY FRIED CHICKEN           27\n",
-       "JIMMY JOHNS                      27\n",
        "AU BON PAIN                      27\n",
-       "POPEYE'S                         26\n",
+       "JIMMY JOHNS                      27\n",
+       "KENTUCKY FRIED CHICKEN           27\n",
        "Subway                           26\n",
+       "POPEYE'S                         26\n",
        "POTBELLY SANDWICH WORKS LLC      25\n",
        "DOMINO'S                         24\n",
        "JEWEL FOOD STORE                 24\n",
-       "LA MICHOACANA                    23\n",
        "PRET A MANGER                    23\n",
        "LAS ISLAS MARIAS                 23\n",
+       "LA MICHOACANA                    23\n",
        "SEE THRU CHINESE KITCHEN         22\n",
-       "PROTEIN BAR                      20\n",
-       "POTBELLY SANDWICH SHOP           20\n",
-       "JERK TACO MAN                    20\n",
-       "IHOP                             20\n",
-       "LAO SZE CHUAN                    20\n",
-       "PANDA EXPRESS                    20\n",
        "PANERA BREAD                     20\n",
-       "MC DONALD'S                      18\n",
-       "ARGO TEA                         18\n",
-       "WOW BAO                          18\n",
+       "JERK TACO MAN                    20\n",
+       "POTBELLY SANDWICH SHOP           20\n",
+       "LAO SZE CHUAN                    20\n",
+       "PROTEIN BAR                      20\n",
+       "PANDA EXPRESS                    20\n",
+       "IHOP                             20\n",
        "SENOR PAN CAFE                   18\n",
-       "Name: Name, dtype: int64"
+       "WOW BAO                          18\n",
+       "ARGO TEA                         18\n",
+       "MC DONALD'S                      18\n",
+       "Name: AKA Name, dtype: int64"
       ]
      },
-     "execution_count": 445,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "newfood = food[food.Year.isin(['2018','2019'])].copy()\n",
-    "newfood.Name.value_counts().head(50)"
+    "newfood = food[food[\"Inspection Date\"].isin(['2018','2019'])].copy()\n",
+    "newfood[\"AKA Name\"].value_counts().head(50)"
    ]
   },
   {
@@ -565,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 446,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -574,30 +573,30 @@
        "False"
       ]
      },
-     "execution_count": 446,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Drop NaN's\n",
-    "newfood.dropna(subset=['Name'], inplace=True)\n",
-    "newfood.Name.isna().any()"
+    "newfood.dropna(subset=[\"AKA Name\"], inplace=True)\n",
+    "newfood[\"AKA Name\"].isna().any()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 447,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Top facilities cleaning (we will not take on account the cleaning of any facility other than the top 5)\n",
-    "newfood.Name = newfood.Name.str.upper()"
+    "newfood[\"AKA Name\"] = newfood[\"AKA Name\"].str.upper()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 448,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -609,63 +608,63 @@
        "MC DONALD'S                               18\n",
        "MCDONALD'S  (T3 HK FOOD COURT)             6\n",
        "MCDONALD'S RESTAURANT                      6\n",
-       "MCDONALD?S 28128                           5\n",
-       "MCDONALD'S RESTAURANT  (T3 H9)             5\n",
        "MCDONALD'S  (T5 ARRIVAL)                   5\n",
+       "MCDONALD'S RESTAURANT  (T3 H9)             5\n",
+       "MCDONALD?S 28128                           5\n",
        "MCDONALDS  (T3  K9)                        5\n",
-       "MCDONALD'S  (T2  E/F)                      4\n",
        "MCDONALDS RESTAURANT                       4\n",
        "MCDONALD'S RESTAURANTS                     4\n",
-       "MCDONALD'S #5813                           3\n",
-       "MCDONALD?S                                 3\n",
+       "MCDONALD'S  (T2  E/F)                      4\n",
        "DONALDS FAMOUS HOT DOGS                    3\n",
+       "MCDONALD?S                                 3\n",
        "MC DONALD'S  (T3  L4)                      3\n",
-       "MCDONALD'S  (T1  B11)                      2\n",
-       "MCDONALDS #4655                            2\n",
-       "MCDONALD'S - MCCAFE'                       2\n",
+       "MCDONALD'S #5813                           3\n",
        "MCDONALDS (T1 C10)                         2\n",
+       "MCDONALDS #4655                            2\n",
        "MCDONALD'S #490                            2\n",
+       "MCDONALD'S - MCCAFE'                       2\n",
        "OFFICER DONALD MARQUEZ CHARTER SCHOOL      2\n",
        "MCDONALD'S #20104                          2\n",
-       "MC DONALDS # 25509                         1\n",
-       "MC DONALD'S RESTAURANT                     1\n",
+       "MCDONALD'S  (T1  B11)                      2\n",
+       "OFFICER DONALD MARQUEZ                     1\n",
+       "MCDONALD'S #5293                           1\n",
        "MC DONALD' S  # 6888                       1\n",
        "MC DONALDS # 6771                          1\n",
-       "MC DONALDS-MCCORMICK PLACE NORTH           1\n",
-       "MCDONALDS #27672                           1\n",
-       "MCDONALDÏ¿½S                               1\n",
-       "MCDONALDÏ¿½S 28128                         1\n",
-       "MCDONALD'S #5293                           1\n",
-       "OFFICER DONALD MARQUEZ                     1\n",
        "MCDONALD'S #26364                          1\n",
-       "Name: Name, dtype: int64"
+       "MC DONALDS # 25509                         1\n",
+       "MCDONALDS #27672                           1\n",
+       "MCDONALDÏ¿½S 28128                         1\n",
+       "MC DONALD'S RESTAURANT                     1\n",
+       "MC DONALDS-MCCORMICK PLACE NORTH           1\n",
+       "MCDONALDÏ¿½S                               1\n",
+       "Name: AKA Name, dtype: int64"
       ]
      },
-     "execution_count": 448,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Let's see if there is other restaurants with \"donald\" to avoid adding wrong data to McDonald's\n",
-    "newfood[newfood[\"Name\"].str.contains(\"DONALD\")].Name.value_counts()"
+    "newfood[newfood[\"AKA Name\"].str.contains(\"DONALD\")][\"AKA Name\"].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 449,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "#removing other restaurants than McDonald's than unifying all McDonald's\n",
     "removable = ['MARQUEZ', 'DOGS']\n",
-    "newfood = newfood[~newfood.Name.str.contains('|'.join(removable))]\n",
-    "newfood.loc[newfood.Name.str.contains(\"DONALD\"), 'Name'] = \"MCDONALDS\""
+    "newfood = newfood[~newfood[\"AKA Name\"].str.contains('|'.join(removable))]\n",
+    "newfood.loc[newfood[\"AKA Name\"].str.contains(\"DONALD\"), \"AKA Name\"] = \"MCDONALDS\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 450,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -676,21 +675,21 @@
        "DUNKIN DONUTS                   207\n",
        "7-ELEVEN                        107\n",
        "BURGER KING                      79\n",
-       "TACO BELL                        78\n",
        "WENDY'S                          78\n",
+       "TACO BELL                        78\n",
        "CHIPOTLE MEXICAN GRILL           63\n",
        "DUNKIN DONUTS/BASKIN ROBBINS     59\n",
        "WINGSTOP                         58\n",
-       "Name: Name, dtype: int64"
+       "Name: AKA Name, dtype: int64"
       ]
      },
-     "execution_count": 450,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "newfood.Name.value_counts().head(10)"
+    "newfood[\"AKA Name\"].value_counts().head(10)"
    ]
   },
   {
